[package]
name = "async-ecs"
version = "0.1.0"
authors = ["Bergmann89 <info@bergmann89.de>"]
edition = "2018"

[dependencies]
async-ecs-derive = "0.1"
env_logger = "0.8"
hashbrown = "0.9"
hibitset = "0.6"
log = "0.4"
mopa = "0.2"
rand = "0.7"
thiserror = "1.0"
tokio = { version = "0.3", features = [ "full", "net", "time", "rt-multi-thread" ] }
