[package]
name = "async-ecs"
version = "0.1.0"
authors = ["Bergmann89 <info@bergmann89.de>"]
description = "Async Parallel Entity Component System for Rust"
edition = "2018"
license = "Apache-2.0/MIT"
repository = "https://github.com/Bergmann89/async-ecs"
documentation = "https://docs.rs/async-ecs/"
readme = "README.md"
keywords = ["gamedev", "ecs", "entity", "component"]
categories = ["concurrency", "game-engines"]

[dependencies]
asparit = "0.1"
async-ecs-derive = { version = "0.1", optional = true }
crossbeam-queue = "0.3"
futures = "0.3"
hashbrown = "0.9"
hibitset = { version = "0.6", default-features = false }
log = "0.4"
mopa = "0.2"
thiserror = "1.0"
tokio = { version = "0.3", features = [ "full", "net", "time", "rt-multi-thread" ] }

[features]
default = [ "derive" ]
derive = [ "async-ecs-derive" ]
